--- a/openstack_dashboard/dashboards/admin/check_global/templates/check_global/index.html
+++ b/openstack_dashboard/dashboards/admin/check_global/templates/check_global/index.html
@@ -9,7 +9,7 @@
 {% block main %}
 <div class="row-fluid">
   <div class="span12">
-    {{ tab_group.render }}
+      {{ security_checks_options_table.render }}
   </div>
 </div>
 {% endblock %}
